--- a/data/initial_data.yml
+++ b/data/initial_data.yml
@@ -16,13 +16,13 @@ battlestyles:
       0: {id: 2, level: 1} # impact stab
       1: {id: 1, level: 1} # flash draw
     links:
-      0: {id: 132}  # normal attack
-      1: {id: 0}    # impact stab
-      2: {id: 1}    # flash draw
-      8: {id: 131}  # pick up items
-      9: {id: 237}  # use hp potion 1 lv
-      10: {id: 239} # use mp potion 1 lv
-      11: {id: 130} # use return stone
+      0: {skill: 132}  # normal attack
+      1: {skill: 0}    # impact stab
+      2: {skill: 1}    # flash draw
+      8: {skill: 131}  # pick up items
+      9: {skill: 237}  # use hp potion 1 lv
+      10: {skill: 239} # use mp potion 1 lv
+      11: {skill: 130} # use return stone
 
   - id: 2 # blader
     location: {world: 2, x: 87, y: 233} # desert scream
@@ -42,13 +42,13 @@ battlestyles:
       0: {id: 2, level: 1} # impact stab
       1: {id: 1, level: 1} # flash draw
     links:
-      0: {id: 132}  # normal attack
-      1: {id: 0}    # impact stab
-      2: {id: 1}    # flash draw
-      8: {id: 131}  # pick up items
-      9: {id: 237}  # use hp potion 1 lv
-      10: {id: 239} # use mp potion 1 lv
-      11: {id: 130} # use return stone
+      0: {skill: 132}  # normal attack
+      1: {skill: 0}    # impact stab
+      2: {skill: 1}    # flash draw
+      8: {skill: 131}  # pick up items
+      9: {skill: 237}  # use hp potion 1 lv
+      10: {skill: 239} # use mp potion 1 lv
+      11: {skill: 130} # use return stone
 
   - id: 3 # wizard
     location: {world: 2, x: 87, y: 233} # desert scream
@@ -68,13 +68,13 @@ battlestyles:
       32: {id: 100, level: 1} # magic arrow
       33: {id: 129, level: 1} # freeze
     links:
-      0: {id: 132}  # normal attack
-      1: {id: 32}   # magic arrow
-      2: {id: 33}   # freeze
-      8: {id: 131}  # pick up items
-      9: {id: 237}  # use hp potion 1 lv
-      10: {id: 239} # use mp potion 1 lv
-      11: {id: 130} # use return stone
+      0: {skill: 132}  # normal attack
+      1: {skill: 32}   # magic arrow
+      2: {skill: 33}   # freeze
+      8: {skill: 131}  # pick up items
+      9: {skill: 237}  # use hp potion 1 lv
+      10: {skill: 239} # use mp potion 1 lv
+      11: {skill: 130} # use return stone
 
   - id: 4 # force archer
     location: {world: 3, x: 219, y: 44} # green despair
@@ -95,14 +95,14 @@ battlestyles:
       33: {id: 148, level: 1} # power shot
       67: {id: 331, level: 1} # astral bow
     links:
-      0: {id: 132}  # normal attack
-      1: {id: 32}   # magic arrow
-      2: {id: 33}   # power shot
-      3: {id: 67}   # astral bow
-      8: {id: 131}  # pick up items
-      9: {id: 237}  # use hp potion 1 lv
-      10: {id: 239} # use mp potion 1 lv
-      11: {id: 130} # use return stone
+      0: {skill: 132}  # normal attack
+      1: {skill: 32}   # magic arrow
+      2: {skill: 33}   # power shot
+      3: {skill: 67}   # astral bow
+      8: {skill: 131}  # pick up items
+      9: {skill: 237}  # use hp potion 1 lv
+      10: {skill: 239} # use mp potion 1 lv
+      11: {skill: 130} # use return stone
 
   - id: 5 # force shielder
     location: {world: 1, x: 32, y: 37} # bloody ice
@@ -123,14 +123,14 @@ battlestyles:
       32: {id: 157, level: 1} # shield shock
       67: {id: 332, level: 1} # astral shield
     links:
-      0: {id: 132}  # normal attack
-      1: {id: 0}    # impact stab
-      2: {id: 32}   # shield shock
-      3: {id: 67}   # astral shield
-      8: {id: 131}  # pick up items
-      9: {id: 237}  # use hp potion 1 lv
-      10: {id: 239} # use mp potion 1 lv
-      11: {id: 130} # use return stone
+      0: {skill: 132}  # normal attack
+      1: {skill: 0}    # impact stab
+      2: {skill: 32}   # shield shock
+      3: {skill: 67}   # astral shield
+      8: {skill: 131}  # pick up items
+      9: {skill: 237}  # use hp potion 1 lv
+      10: {skill: 239} # use mp potion 1 lv
+      11: {skill: 130} # use return stone
 
   - id: 6 # force blader
     location: {world: 3, x: 219, y: 44} # green despair
@@ -151,11 +151,11 @@ battlestyles:
       32: {id: 100, level: 1} # magic arrow
       33: {id: 252, level: 1} # enchant
     links:
-      0: {id: 132}  # normal attack
-      1: {id: 0}    # impact stab
-      2: {id: 32}   # magic arrow
-      3: {id: 33}   # enchant
-      8: {id: 131}  # pick up items
-      9: {id: 237}  # use hp potion 1 lv
-      10: {id: 239} # use mp potion 1 lv
-      11: {id: 130} # use return stone
+      0: {skill: 132}  # normal attack
+      1: {skill: 0}    # impact stab
+      2: {skill: 32}   # magic arrow
+      3: {skill: 33}   # enchant
+      8: {skill: 131}  # pick up items
+      9: {skill: 237}  # use hp potion 1 lv
+      10: {skill: 239} # use mp potion 1 lv
+      11: {skill: 130} # use return stone
